fixing SAVi layout issues

--- a/ctrack/art/ctrack.css
+++ b/ctrack/art/ctrack.css
@@ -14,7 +14,7 @@ i						{color:#444; font-style:italics;}
 .ctrack					{width:100%; min-height:100%; height:auto !important; height:100%; margin:0px 0px -40px 0px;}
 .ctrack_main			{width:100%; min-width:1040px; padding:0px 0px 40px 0px; background-color: rgba(255,255,255,0.4);}
 #imgwrap 				{width:100%; height:100%; position:fixed; top:0; left:0; z-index:-1; background-image:url('backgroundimage.jpg'); background-repeat:no-repeat; background-position:center center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}
-.wrapper				{width:100%; padding:0px 0px 40px 0px; background-color:rgba(46, 41, 6, 0.6);}
+.wrapper				{width:100%; background-color:rgba(46, 41, 6, 0.6);}
 
 .bold					{font-weight:bold;}
 .bold.ob				{font-style:italic;}
